2012-09-14  Björn Andersson  <ba@sanitarium.se>, v1.0.2

	Oops, typo in the recorder which affected urls with characters that
	can be escaped.

2012-09-09  Björn Andersson  <ba@sanitarium.se>, v1.0.1

	User request for a better progress bar, so I've obliged with the
	excellent `progress_bar` gem by Paul Sadauskas.
	https://github.com/paul/progress_bar

	* svt-recorder uses a new progress bar that estimates time to
	  completion, shows how long the download has been going on and
	  also displays how many chunks that has been downloaded together
	  with the total number of chunks.
	* SVT::Recorder.fetch_playlist doesn't need to be called with
	  a block anymore.

2012-06-04  Björn Andersson  <ba@sanitarium.se>, v1.0.0

	SVT has changed their website and thus the way data is fetched.
	Changed to the new format which basically is the same for both
	Play and Rapport now.

	Added Nokogiri as a dependency because REXML doesn't handle broken HTML
	as well. Sadly SVTPlay.se didn't have valid code that made REXML barf.

	Since I'll most likely not add support for RTMP streams on my own
	I'm calling this 1.0 and possible support for RTMP will be
	another major release at that point.

2012-01-15  Björn Andersson  <ba@sanitarium.se>, v0.9.6

	Patch received from Anders Eurenius (aes on Github) that will
	retry a chunk download if it times out.

	Thanks Anders!

2010-11-03  Björn Andersson  <ba@sanitarium.se>, v0.9.5

	* svt-recorder flushes the output buffers when printing information.
	* svt-recorder one dot in the progress meter is 1MB.
	* svt-recorder streams all content onto disk instead of reading ALL
	of it into memory first.
	* svt-recorder will ask if you want to overwrite an existing file

	* Recorders The recorder classes now return themselves with attributes
	set for each value that the user might want. Bitrate, parts, etc.
	That instead of emitting an array.
	All recorders now inherit from SVT::Recorder::Base