@@ -33,6 +33,6 @@ module SVT #:nodoc:
       end
     end
 
-    VERSION = '1.0.2'
+    VERSION = '1.0.3'
   end
 end
